# metal-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PR_DRAFT_B2.md  README.ja.md  README.md  README.zh-TW.md  metal_guard.py  metal_guard_cli.py  pyproject.toml
.github/ISSUE_TEMPLATE/: known-panic-report.yml
.github/workflows/: ci.yml  publish.yml
scripts/: mlx-safe-python
tests/: test_cli.py  test_l10_panic_cooldown.py  test_l11_orphan_monitor.py  test_l12_postmortem.py  test_l13_status_snapshot.py  test_l9_cadence_guard.py  test_l9_circuit_breaker.py  test_l9_panic_ingest.py  test_l9_panic_signature.py  test_metal_guard.py  test_safe_python_main.py  test_subprocess_inference_guard.py  test_v011_error_classifier.py  test_v011_features.py  test_v090_cross_model_cadence.py
