[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-guard"
version = "0.6.0"
description = "GPU safety layer for MLX on Apple Silicon — prevents kernel panics from Metal driver bugs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Harper Systems"},
]
keywords = ["mlx", "apple-silicon", "metal", "gpu", "safety", "kernel-panic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
mlx = ["mlx>=0.20"]

[project.urls]
Repository = "https://github.com/harper-systems/metal-guard"
Issues = "https://github.com/harper-systems/metal-guard/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
