[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-guard"
version = "0.10.0"
description = "GPU safety layer for MLX on Apple Silicon — prevents kernel panics from Metal driver bugs, includes community-curated KNOWN_PANIC_MODELS registry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Harper Systems"},
]
keywords = ["mlx", "apple-silicon", "metal", "gpu", "safety", "kernel-panic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
mlx = ["mlx>=0.20"]
test = ["pytest>=7.0"]

[project.scripts]
# Phase 4 spec section 6 第 2 項：standalone CLI 給 PyPI 用戶用
metal-guard = "metal_guard_cli:main"
# v0.10 — interactive shell guard (replaces scripts/mlx-safe-python bash for
# pip users; bash wrapper kept in source tree for non-pip installs).
mlx-safe-python = "metal_guard_cli:safe_python_main"

[project.urls]
Repository = "https://github.com/Harperbot/metal-guard"
Issues = "https://github.com/Harperbot/metal-guard/issues"
Changelog = "https://github.com/Harperbot/metal-guard/blob/main/CHANGELOG.md"
"Known Panic Models" = "https://github.com/Harperbot/metal-guard#-community-panic-registry--known_panic_models"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
