[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metal-guard"
version = "0.11.6"
description = "GPU safety layer for MLX on Apple Silicon — prevents kernel panics from Metal driver bugs, includes community-curated KNOWN_PANIC_MODELS registry"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Harper Systems"},
]
keywords = ["mlx", "apple-silicon", "metal", "gpu", "safety", "kernel-panic"]
# PEP 639: when `license = "<SPDX>"` is set, the `License :: OSI Approved :: MIT License`
# classifier MUST be omitted — modern setuptools rejects both at once
# (`InvalidConfigError: License classifiers have been superseded by license expressions`).
# v0.10.1 hotfix: removed legacy classifier so `pip install git+https://...` works
# on modern setuptools/pip (the Option A install path documented in README).
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]

[project.optional-dependencies]
mlx = ["mlx>=0.20"]
test = ["pytest>=7.0"]

[project.scripts]
# Phase 4 spec section 6 第 2 項：standalone CLI 給 PyPI 用戶用
metal-guard = "metal_guard_cli:main"
# v0.10 — interactive shell guard (replaces scripts/mlx-safe-python bash for
# pip users; bash wrapper kept in source tree for non-pip installs).
mlx-safe-python = "metal_guard_cli:safe_python_main"

[project.urls]
Repository = "https://github.com/Harperbot/metal-guard"
Issues = "https://github.com/Harperbot/metal-guard/issues"
Changelog = "https://github.com/Harperbot/metal-guard/blob/main/CHANGELOG.md"
"Known Panic Models" = "https://github.com/Harperbot/metal-guard#-community-panic-registry--known_panic_models"

[tool.setuptools]
# v0.11.1 hotfix: explicit py-modules list. setuptools 80+ refuses flat-
# layout auto-discovery when >1 top-level .py module exists ("Multiple
# top-level modules discovered in a flat-layout"). v0.10 had the same
# layout but install was already blocked by PEP 639 so this error was
# masked. v0.11.0 fixed PEP 639 and exposed this second failure.
py-modules = ["metal_guard", "metal_guard_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
